--- a/CalendarGridView/CalendarItemView.xaml
+++ b/CalendarGridView/CalendarItemView.xaml
@@ -7,14 +7,18 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     d:DesignHeight="300"
-    d:DesignWidth="400">
+    d:DesignWidth="400"
+    VerticalAlignment="Stretch">
 
     <UserControl.Resources>
         <local:DateConverter x:Key="DateConverter"/>
         
     </UserControl.Resources>
 
-    <Grid>
+    <Grid x:Name="grid"
+          AllowDrop="{x:Bind AllowDrop, Mode=OneWay}"
+          VerticalAlignment="Stretch"
+          Background="Transparent">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition />
@@ -23,7 +27,8 @@
         
         <TextBlock Text="{x:Bind CalendarItem, Converter={StaticResource DateConverter}, Mode=OneWay}"
                    Style="{ThemeResource CaptionTextBlockStyle}"
-                   Foreground="{ThemeResource SystemAccentColor}"/>
+                   Foreground="{ThemeResource SystemAccentColor}"
+                   IsHitTestVisible="False"/>
 
         <ContentControl ContentTemplate="{x:Bind ItemTemplate}"  
                         VerticalContentAlignment="Stretch"
